# 6824

./: .gitignore  README.md
lab1/MapReduce/mr/: CMakeLists.txt  README.md  count_words  map_reduce.proto  mr_master.cpp  mr_worker.cpp  mrtmp.wcseq1  test-crash.sh  test-wc.sh  tools.cpp  word_count.cpp
lab1/MapReduce/mr/include/: mr_common.h  mr_master.h  mr_worker.h
lab1/MapReduce/my_demo/: CMakeLists.txt  README.md  demo.proto  demo_client.cpp  demo_server.cpp
lab2/: README.md  raft中文概述.md
lab2/src/: CMakeLists.txt  client.cpp  main.cpp  node.json  raft.cpp  raft.proto  raft_1.txt  raft_2.txt  run_one_raft.sh  run_rafts.sh
lab2/src/include/: persister.h  raft.h  test.h
lab3/src/: CMakeLists.txt  kvserver.cpp  kvserver.proto  raft.cpp  raft.proto  raft_main.cpp  run_one_raft.sh
lab3/src/include/: config.h  raft.h
